--- a/retroarch.cfg
+++ b/retroarch.cfg
@@ -101,21 +101,22 @@ cloud_sync_sync_thumbs = "false"
 config_save_on_exit = "true"
 content_database_path = ":\database\rdb"
 content_favorites_directory = "default"
-content_favorites_path = ":\content_favorites.lpl"
+content_favorites_path = ":\playlists\builtin\content_favorites.lpl"
 content_favorites_size = "200"
 content_history_directory = "default"
-content_history_path = ":\content_history.lpl"
+content_history_path = ":\playlists\builtin\content_history.lpl"
 content_history_size = "200"
 content_image_history_directory = "default"
-content_image_history_path = ":\content_image_history.lpl"
+content_image_history_path = ":\playlists\builtin\content_image_history.lpl"
 content_music_history_directory = "default"
-content_music_history_path = ":\content_music_history.lpl"
+content_music_history_path = ":\playlists\builtin\content_music_history.lpl"
 content_runtime_log = "true"
 content_runtime_log_aggregate = "false"
 content_show_add_entry = "1"
 content_show_contentless_cores = "2"
 content_show_explore = "true"
 content_show_favorites = "true"
+content_show_favorites_first = "false"
 content_show_history = "true"
 content_show_images = "true"
 content_show_music = "false"
@@ -126,13 +127,14 @@ content_show_settings = "true"
 content_show_settings_password = ""
 content_show_video = "true"
 content_video_directory = "default"
-content_video_history_path = ":\content_video_history.lpl"
+content_video_history_path = ":\playlists\builtin\content_video_history.lpl"
 core_assets_directory = ":\downloads"
 core_info_cache_enable = "true"
 core_info_savestate_bypass = "false"
 core_option_category_enable = "true"
 core_options_path = ""
 core_set_supports_no_game_enable = "true"
+core_suggest_always = "false"
 core_updater_auto_backup = "true"
 core_updater_auto_backup_history_size = "1"
 core_updater_auto_extract_archive = "true"
@@ -146,6 +148,7 @@ crt_switch_resolution = "0"
 crt_switch_resolution_super = "2560"
 crt_switch_resolution_use_custom_refresh_rate = "false"
 crt_switch_timings = ""
+crt_switch_vertical_adjust = "0"
 crt_video_refresh_rate = "60.000000"
 current_resolution_id = "0"
 custom_viewport_height = "0"
@@ -2809,6 +2812,10 @@ input_screenshot_axis = "nul"
 input_screenshot_btn = "nul"
 input_screenshot_mbtn = "nul"
 input_sensors_enable = "true"
+input_shader_hold = "nul"
+input_shader_hold_axis = "nul"
+input_shader_hold_btn = "nul"
+input_shader_hold_mbtn = "nul"
 input_shader_next = "m"
 input_shader_next_axis = "nul"
 input_shader_next_btn = "nul"
@@ -2963,6 +2970,7 @@ menu_show_sublabels = "true"
 menu_swap_ok_cancel_buttons = "true"
 menu_swap_scroll_buttons = "false"
 menu_throttle_framerate = "true"
+menu_thumbnail_background_enable = "false"
 menu_thumbnail_upscale_threshold = "0"
 menu_thumbnails = "3"
 menu_ticker_smooth = "true"
@@ -3085,7 +3093,18 @@ notification_show_when_menu_is_alive = "false"
 osk_overlay_directory = ":\overlays\keyboards"
 overlay_directory = ":\overlays"
 ozone_collapse_sidebar = "false"
+ozone_font = ""
+ozone_font_scale = "0"
+ozone_font_scale_factor_footer = "1.000000"
+ozone_font_scale_factor_global = "1.000000"
+ozone_font_scale_factor_label = "1.000000"
+ozone_font_scale_factor_sidebar = "1.000000"
+ozone_font_scale_factor_sublabel = "1.000000"
+ozone_font_scale_factor_time = "1.000000"
+ozone_font_scale_factor_title = "1.000000"
+ozone_header_separator = "1"
 ozone_menu_color_theme = "10"
+ozone_padding_factor = "1.000000"
 ozone_scroll_content_metadata = "false"
 ozone_sort_after_truncate_playlist_name = "false"
 ozone_thumbnail_scale_factor = "1.000000"
